all links are working

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,5 @@
 #home {
-    background-image: url("../img/test.png");
+    background-image: url("../img/home.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
