--- a/assets/css/cs61a.css
+++ b/assets/css/cs61a.css
@@ -15,10 +15,11 @@
 }
 
 #contact-blurb{
+    font-family:Avenir;
     position:relative;
     left:5%;
     text-align:center;
-    font-size: 20px;
+    font-size: 15px;
     width:90%;
 }
 
