--- a/assets/css/nav-bar.css
+++ b/assets/css/nav-bar.css
@@ -1,4 +1,73 @@
-#nav-topbar {
+
+#nav-topbar-about {
+    position:fixed;
+    width:100vw;
+    height:50px;
+    z-index: 1;
+}
+
+#nav-item-container-about {
+    position:fixed;
+    top:10px;
+    width:80%;
+    height:50px;
+    background: rgba(255,255,255,0.95);
+    left:50%;
+    transform:translateX(-50%);
+}
+
+
+#nav-topbar-about #nav-home-about {
+    display:inline;
+}
+
+#nav-topbar-about #nav-home-about:hover {
+    color: #CD5360;
+
+}
+
+#nav-topbar-about #nav-items-about {
+    display: inline;
+    position:absolute;
+    right:0px;
+}
+
+  @media screen and (max-width: 530px) {
+     #nav-topbar-about #nav-items-about {
+         display:none;
+     }
+ } 
+
+#nav-topbar-about a {
+    text-decoration: none;
+    color:inherit;
+}
+
+#nav-topbar-about a:hover {
+    color: #CD5360;
+}
+
+
+#nav-topbar-about #nav-items-about a{
+    padding-left: 10px;
+}
+
+#nav-underline-about {
+    background-color: #286DA8;
+    width: 100%;
+    height:2px;
+    position:relative;
+    top: 7px;
+}
+
+
+
+
+
+
+
+
+/*#nav-topbar {
     position:fixed;
     z-index: 10;
     background: rgba(255,255,255,0.85);
@@ -31,7 +100,6 @@
 #nav-topbar #nav-items {
     display: inline;
     position: absolute;
-    /* left: 700px; */
     right:0px;
 }
 
@@ -44,7 +112,6 @@
  #nav-topbar .nav-item {
     display: inline;
     position:relative;
-    /* left: 700px;  */
     padding-left: 30px;
 } 
 
@@ -63,7 +130,7 @@
     height: 2px;
     position:relative;
     top: 7px
-}
+}*/
 
 /* #nav-sidebar {
     display:none;
