--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,10 @@ body {
 }
 
 #grayed-out-box {
-    display:none;
+    /*display:none;*/
     position:fixed;
     width:100%;
-    height:100vh;
+    height:110vh;
      background-color:rgba(0,0,0,.32); 
      /* background-color:yellow;  */
     z-index:15;
