--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -9,9 +9,51 @@
     position:relative;
 }
 
-.nav-topbar {
-    display: none;
+#container {
+    display: inline-block;
+    cursor: pointer;
+    position:relative;
+    left:96%;
+    transform: translateY(60%);
+
 }
+
+/*.grayed-out-box {
+    display:none;
+    width:100%;
+    height:100vh;
+     background-color:rgba(0,0,0,.32); 
+    z-index:15;
+}*/
+
+.bar1, .bar2, .bar3 {
+    width: 22px;
+    height: 3px;
+    color: #CD5360;
+    background-color: #CD5360;
+    margin: 3px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-5px, -5px);
+    transform: rotate(45deg) translate(-5px, -5px);
+}
+
+/*.change .grayed-out-box {
+    position:fixed;
+    width:100%;
+    height:100vh;
+     background-color:rgba(0,0,0,.32); 
+    z-index:15;
+}*/
 
 
 
@@ -116,21 +158,13 @@
         padding-left:0.5%;
         padding-right:0.5%;
     }
-}
 
-
-/*@media screen and (min-width: 1200px) {
-    #tagline {
-        font-size:30px;
+    #container {
+        position:relative;
+        width:40%;
+        left: 90%;
     }
 }
-
-@media screen and (max-width: 500px) {
-    #tagline {
-        font-size:13px;
-    }
-}
-*/
 
 /*scroll*/
 #scroll-margin {
