sidebar overlay is working

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -9,22 +9,18 @@
     position:relative;
 }
 
-#container {
-    display: inline-block;
-    cursor: pointer;
-    position:relative;
-    left:96%;
-    transform: translateY(60%);
-
+#sidebar-box {
+    height:100vh;
 }
 
-/*.grayed-out-box {
-    display:none;
-    width:100%;
-    height:100vh;
-     background-color:rgba(0,0,0,.32); 
-    z-index:15;
-}*/
+#sidebar-container {
+    display: inline-block;
+    cursor: pointer;
+    left:96%;
+    transform: translateY(70%);
+    z-index:4;
+    position: relative;
+}
 
 .bar1, .bar2, .bar3 {
     width: 22px;
@@ -33,6 +29,9 @@
     background-color: #CD5360;
     margin: 3px 0;
     transition: 0.4s;
+   /* position: fixed;
+    z-index:40;*/
+
 }
 
 .change .bar1 {
@@ -47,15 +46,22 @@
     transform: rotate(45deg) translate(-5px, -5px);
 }
 
-/*.change .grayed-out-box {
-    position:fixed;
-    width:100%;
+.change .opaque-background {
+    background-color: #3A3A3A;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 570px;
     height:100vh;
-     background-color:rgba(0,0,0,.32); 
-    z-index:15;
-}*/
+    /*z-index:2;*/
+    /*position:relative;*/
+    opacity: 0.5;
+}
 
-
+.change #hello {opacity: 0;}
+.change .karina {opacity: 0;}
+.change .scroll-to-learn {opacity: 0;}
+.change .scroll-arrow {opacity: 0;}
 
 #home-title-container-margin {
     position:relative;
@@ -102,7 +108,7 @@
     transform: translateX(-50%);
 }
 
-#karina {
+.karina {
     font-size: 12vw;
     text-align: center;
     color: #286DA8;
@@ -180,6 +186,7 @@
     left: 30%;
     transform: translateX(-50%);
 }
+
 #scroll-to-learn {
     color: #CD5360;
     font-size:15px;
