--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2398,12 +2398,19 @@
 	}
 
 /* Icon */
-
 	.icon {
 		text-decoration: none;
 		border-bottom: none;
 		position: relative;
 		text-align: center;
+		/*color: #CD5360;*/
+	}
+
+	.icon.style2 {
+		color: #CD5360;
+	}
+	.icon.style3 {
+		color: #286DA8;
 	}
 
 		.icon:before {
@@ -2413,6 +2420,7 @@
 			font-style: normal;
 			font-weight: normal;
 			text-transform: none !important;
+			/*color: #CD5360;*/
 		}
 
 		.icon > .label {
@@ -2420,6 +2428,14 @@
 		}
 
 		.icon.style2:before {
+			border-radius: 2.75em;
+			display: inline-block;
+			height: 2.75em;
+			line-height: 2.75em;
+			width: 2.75em;
+		}
+
+		.icon.style3:before {
 			border-radius: 2.75em;
 			display: inline-block;
 			height: 2.75em;
@@ -2443,19 +2459,38 @@
 		transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 	}
 
+	a.icon.style3:before {
+		-moz-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+		-webkit-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+		-ms-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+		transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+	}
+
 	.icon.style2:before {
-		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
+		box-shadow: inset 0 0 0 1px #CD5360;
+	}
+
+	.icon.style3:before {
+		box-shadow: inset 0 0 0 1px #286DA8;
 	}
 
 	a.icon.style2:hover:before {
-		box-shadow: inset 0 0 0 1px #47D3E5;
-		color: #47D3E5;
+		opacity: 0.5;
+	}
+
+	a.icon.style3:hover:before {
+		opacity: 0.5;
 	}
 
 	a.icon.style2:active:before {
 		background-color: rgba(71, 211, 229, 0.1);
-		box-shadow: inset 0 0 0 1px #47D3E5;
-		color: #47D3E5;
+		box-shadow: inset 0 0 0 1px #CD5360;
+		color: #CD5360;
+	}
+	a.icon.style3:active:before {
+		background-color: rgba(71, 211, 229, 0.1);
+		box-shadow: inset 0 0 0 1px #286DA8;
+		color: #286DA8;
 	}
 
 /* Image */
@@ -2554,6 +2589,16 @@
 			cursor: default;
 			list-style: none;
 			padding-left: 0;
+		}
+
+		ul.icons.style2 {
+			text-align: center;
+		}
+
+
+		ul.icons.style3 {
+			text-align: center;
+			position: relative;
 		}
 
 			ul.icons li {
