--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,10 @@ body {
 }
 
 .outer-container {
-    max-width: 1100px;
     position:relative;
-    left:50%;
+    width:80%;
+    left: 50%;
     transform: translateX(-50%);
-    
 }
 
 .section-card {
@@ -23,7 +22,7 @@ body {
     position:fixed;
     width:100%;
     height:100vh;
-     background-color:rgba(0,0,0,.32); 
+    background-color:rgba(0,0,0,.32); 
     z-index:15;
 }
 
