--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -22,6 +22,16 @@
     padding-right:3%;
 }
 
+@media screen and (max-width: 800px) {
+    #work-box {
+        width: 100%;
+    }
+    #comp-pic-box {
+        width: 70%;
+        text-align: center;
+    }
+}
+
 #company-text {
     width:100%;
     height:100%;
